Fix the vertical spacing for centered images
Horizontally centered galleries are nested differently than normal
galleries:
@see https://git.typo3.org/typo3/typo3/-/blob/12.4/typo3/sysext/fluid_styled_content/Resources/Private/Partials/Media/Gallery.html?ref_type=heads#L4

--- a/_gallery.scss
+++ b/_gallery.scss
@@ -30,7 +30,8 @@
             gap: $gap;
         }
 
-        .ce-gallery {
+        .ce-gallery,
+        .ce-outer > .ce-inner {
             display: flex;
             gap: $gap;
             flex-flow: column;
